{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 60,
  "lineage": "718df6bc-22b0-c943-f816-dda4c5202abb",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:654654502416:loadbalancer/app/ex-fargate/a1631407fd2c3f23",
            "arn_suffix": "app/ex-fargate/a1631407fd2c3f23",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ex-fargate-1457987743.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:654654502416:loadbalancer/app/ex-fargate/a1631407fd2c3f23",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ex-fargate",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cfacdb940f09cb01"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a2cc8c4fbb93b354"
              },
              {
                "subnet_id": "subnet-0baeeccc062657238"
              }
            ],
            "subnets": [
              "subnet-0a2cc8c4fbb93b354",
              "subnet-0baeeccc062657238"
            ],
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0bdc73a02bb070f45",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ex_http",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:654654502416:listener/app/ex-fargate/a1631407fd2c3f23/95d31aabc8e249c9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:654654502416:targetgroup/tf-2024090321365306280000000d/1dfc3c1637d227e9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:654654502416:listener/app/ex-fargate/a1631407fd2c3f23/95d31aabc8e249c9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:654654502416:loadbalancer/app/ex-fargate/a1631407fd2c3f23",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ex_ecs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:654654502416:targetgroup/tf-2024090321365306280000000d/1dfc3c1637d227e9",
            "arn_suffix": "targetgroup/tf-2024090321365306280000000d/1dfc3c1637d227e9",
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:654654502416:targetgroup/tf-2024090321365306280000000d/1dfc3c1637d227e9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "true",
            "name": "tf-2024090321365306280000000d",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0bdc73a02bb070f45"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:654654502416:security-group/sg-0cfacdb940f09cb01",
            "description": "Security group for ex-fargate application load balancer",
            "egress": [],
            "id": "sg-0cfacdb940f09cb01",
            "ingress": [],
            "name": "ex-fargate-2024090321365309670000000e",
            "name_prefix": "ex-fargate-",
            "owner_id": "654654502416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdc73a02bb070f45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:654654502416:security-group-rule/sgr-078d2b4c145ae131a",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-078d2b4c145ae131a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cfacdb940f09cb01",
            "security_group_rule_id": "sgr-078d2b4c145ae131a",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all_http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:654654502416:security-group-rule/sgr-0f1588edb64a7d620",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0f1588edb64a7d620",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cfacdb940f09cb01",
            "security_group_rule_id": "sgr-0f1588edb64a7d620",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:654654502416:subnet/subnet-0f6b0fb00eab0247b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "available_ip_address_count": 4091,
            "cidr_block": "10.0.0.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6b0fb00eab0247b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654502416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0bdc73a02bb070f45"
          }
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:654654502416:security-group/sg-0d1af86de53326b0f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d1af86de53326b0f",
            "ingress": [],
            "name": "ex-fargate-2024090321365366750000000f",
            "name_prefix": "ex-fargate-",
            "owner_id": "654654502416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdc73a02bb070f45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.ecs_service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb_ingress_3000",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Service port",
            "from_port": 3000,
            "id": "sgrule-1058664311",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d1af86de53326b0f",
            "security_group_rule_id": "sgr-0733e4996386a7b5b",
            "self": false,
            "source_security_group_id": "sg-0cfacdb940f09cb01",
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_security_group.this",
            "module.ecs_service.aws_security_group.this",
            "module.ecs_service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2589723163",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d1af86de53326b0f",
            "security_group_rule_id": "sgr-0d61710061be5c95d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_security_group.this",
            "module.ecs_service.aws_security_group.this",
            "module.ecs_service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_task_definition",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:654654502416:subnet/subnet-0f6b0fb00eab0247b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "available_ip_address_count": 4091,
            "cidr_block": "10.0.0.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6b0fb00eab0247b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654502416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0bdc73a02bb070f45"
          }
        }
      ]
    },
    {
      "module": "module.ecs_task_definition",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:654654502416:security-group/sg-024893fcce32cebf7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-024893fcce32cebf7",
            "ingress": [],
            "name": "ex-fargate-standalone-20240903213653874600000011",
            "name_prefix": "ex-fargate-standalone-",
            "owner_id": "654654502416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate-standalone",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate-standalone",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdc73a02bb070f45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.ecs_task_definition.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_task_definition",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-223780667",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-024893fcce32cebf7",
            "security_group_rule_id": "sgr-0998910ad69b987ca",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.ecs_task_definition.aws_security_group.this",
            "module.ecs_task_definition.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:654654502416:network-acl/acl-089e04fe72bb30ec1",
            "default_network_acl_id": "acl-089e04fe72bb30ec1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-089e04fe72bb30ec1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "654654502416",
            "subnet_ids": [
              "subnet-09bdda2f5f35d5a9a",
              "subnet-0a2cc8c4fbb93b354",
              "subnet-0baeeccc062657238",
              "subnet-0f6b0fb00eab0247b"
            ],
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0bdc73a02bb070f45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:654654502416:route-table/rtb-0fc3fe69116621c9c",
            "default_route_table_id": "rtb-0fc3fe69116621c9c",
            "id": "rtb-0fc3fe69116621c9c",
            "owner_id": "654654502416",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0bdc73a02bb070f45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:654654502416:security-group/sg-06c77426676dd9670",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06c77426676dd9670",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "654654502416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0bdc73a02bb070f45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e86164715d90c7e",
            "arn": "arn:aws:ec2:eu-west-2:654654502416:elastic-ip/eipalloc-00e86164715d90c7e",
            "domain": "vpc",
            "id": "eipalloc-00e86164715d90c7e",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-169-22-105.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.169.22.105",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:654654502416:internet-gateway/igw-08473595963c8411a",
            "id": "igw-08473595963c8411a",
            "owner_id": "654654502416",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0bdc73a02bb070f45"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e86164715d90c7e",
            "association_id": "eipassoc-0a3cf0abf3590d115",
            "connectivity_type": "public",
            "id": "nat-01b3172fcd5e133fb",
            "network_interface_id": "eni-0dda349bd518575a8",
            "private_ip": "10.0.48.157",
            "public_ip": "18.169.22.105",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a2cc8c4fbb93b354",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d97a41d4dd67c4ad1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01b3172fcd5e133fb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d97a41d4dd67c4ad",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08473595963c8411a",
            "id": "r-rtb-093e58c086b38cab01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-093e58c086b38cab0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:654654502416:route-table/rtb-0d97a41d4dd67c4ad",
            "id": "rtb-0d97a41d4dd67c4ad",
            "owner_id": "654654502416",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdc73a02bb070f45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:654654502416:route-table/rtb-093e58c086b38cab0",
            "id": "rtb-093e58c086b38cab0",
            "owner_id": "654654502416",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdc73a02bb070f45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e12a99e339e4923d",
            "route_table_id": "rtb-0d97a41d4dd67c4ad",
            "subnet_id": "subnet-0f6b0fb00eab0247b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06201cb33da652d69",
            "route_table_id": "rtb-0d97a41d4dd67c4ad",
            "subnet_id": "subnet-09bdda2f5f35d5a9a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0556f1a3cdcba86df",
            "route_table_id": "rtb-093e58c086b38cab0",
            "subnet_id": "subnet-0a2cc8c4fbb93b354"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040690becc7d33bf9",
            "route_table_id": "rtb-093e58c086b38cab0",
            "subnet_id": "subnet-0baeeccc062657238"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:654654502416:subnet/subnet-0f6b0fb00eab0247b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6b0fb00eab0247b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654502416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0bdc73a02bb070f45"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:654654502416:subnet/subnet-09bdda2f5f35d5a9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bdda2f5f35d5a9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654502416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0bdc73a02bb070f45"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:654654502416:subnet/subnet-0a2cc8c4fbb93b354",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2cc8c4fbb93b354",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654502416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0bdc73a02bb070f45"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:654654502416:subnet/subnet-0baeeccc062657238",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0baeeccc062657238",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654502416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0bdc73a02bb070f45"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:654654502416:vpc/vpc-0bdc73a02bb070f45",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-089e04fe72bb30ec1",
            "default_route_table_id": "rtb-0fc3fe69116621c9c",
            "default_security_group_id": "sg-06c77426676dd9670",
            "dhcp_options_id": "dopt-0beb99b32eac01c8f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bdc73a02bb070f45",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fc3fe69116621c9c",
            "owner_id": "654654502416",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}